--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <title>my simple website</title>
     <link rel="stylesheet" href="styles/blog.css">
 </head>
-<body>
-    <div>
+<body><div>
     <h1>my first web</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque molestiae velit inventore distinctio harum amet. Repellendus sint cum quisquam illum doloribus nam culpa voluptate quidem. Recusandae tenetur sapiente est animi.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque 
+    molestiae velit inventore distinctio harum amet. Repellendus sint cum quisquam illum doloribus nam culpa voluptate quidem. Recusandae tenetur sapiente est animi.</p>
+</div>
+<div>
+    <h1>my second web</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque 
+    molestiae velit inventore distinctio harum amet. Repellendus sint cum quisquam illum doloribus nam culpa voluptate quidem. Recusandae tenetur sapiente est animi.</p>
+</div>
+<div>
+<h1>my third web</h1>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque 
+molestiae velit inventore distinctio harum amet. Repellendus sint cum quisquam illum doloribus nam culpa voluptate quidem. Recusandae tenetur sapiente est animi.</p>
 </div>
 </body>
 </html>
