--- a/index.html
+++ b/index.html
@@ -21,5 +21,18 @@
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque 
 molestiae velit inventore distinctio harum amet. Repellendus sint cum quisquam illum doloribus nam culpa voluptate quidem. Recusandae tenetur sapiente est animi.</p>
 </div>
+
+
+<div>
+<h3>how to push incremental code</h3>
+<ul>
+    <li>git add .</li>
+    <li>git commit -m"add a meaningful commit message"</li>
+    <li>git push</li>
+</ul>
+
+
+</div>
+
 </body>
 </html>
